@@ -38,3 +38,14 @@ class TestActionmenuViewlet(FunctionalTestCase):
             ['task-transition-open-cancelled',
              'task-transition-open-tested-and-closed'],
             browser.css('dl.agency_buttons ul a').text)
+
+    @browsing
+    def test_agency_button_is_hidden_when_no_agency_actions_are_available(self, browser):
+        task = create(Builder('task')
+                           .having(issuer=TEST_USER_ID,
+                                   responsible=TEST_USER_ID,
+                                   task_type='comment'))
+
+        browser.login().open(task, view='tabbedview_view-overview')
+
+        self.assertEquals([], browser.css('dl.agency_buttons'))
